[package]
name = "hammerspace"
description = "A plugin for the loading and management of levels and scenes, and their physical properties"
repository = "https://github.com/KyWinston/hammerspace"
version = "0.4.2"
authors = ["Ky Winston<kwinston@proton.me>"]
edition = "2021"
exclude = ["assets/*", "examples/*", "**/bin", "*_template"]
license = "MIT OR Apache-2.0"
keywords = ["bevy"]
publish = true

[dependencies]
bevy = { version = "0.15.1", default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_render",
    "bevy_state",
    "bevy_sprite",
    "bevy_gltf",
] }
serde = "1.0.195"
cfg-if = "1.0.0"
vleue_navigator = { version = "0.10.2", optional = true }
clap = { version = "4.5.*", optional = true }
bitflags = { version = "2.5.0", optional = true }
sickle_ui = { version = "0.2.1", optional = true }
baby_shark = { version = "0.3.3", optional = true }
stl_io = { version = "0.7.0", optional = true }
image = { version = "0.25.*", optional = true }
blenvy = { git = "https://github.com/ptsd/Blenvy", branch = "blenvy-bevy-0.15" }
rand = "0.8.5"
iyes_progress = "0.13.1"
big-brain = { version = "0.21.1", optional = true }
bevy_copperfield = { version = "0.1.0", optional = true }

[dev-dependencies]
cargo-husky = { version = "1", features = [
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
] }

[features]
default = []
pathfind = ["dep:vleue_navigator", "dep:big-brain"]
proc_terrain = [
    "dep:baby_shark",
    "dep:bevy_copperfield",
    "dep:image",
    "dep:stl_io",
]
debug = []

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
