[package]
name = "hammerspace"
description = "A plugin for the loading and management of levels and scenes, and their physical properties"
repository = "https://github.com/KyWinston/hammerspace"
version = "0.4.2"
authors = ["Ky Winston<kwinston@proton.me>"]
edition = "2021"
exclude = ["assets/*", "examples/*", "**/bin", "*_template"]
license = "MIT OR Apache-2.0"
keywords = ["bevy"]
publish = true

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_render",
    "bevy_state",
    "bevy_sprite",
    "bevy_gltf",
] }
serde = "1.0.195"
cfg-if = "1.0.0"
vleue_navigator = { version = "0.10.2", optional = true }
clap = { version = "4.5.*", optional = true }
bitflags = { version = "2.5.0", optional = true }
sickle_ui = { version = "0.2.1", optional = true }
baby_shark = { version = "0.3.3", optional = true }
stl_io = { version = "0.7.0", optional = true }
image = { version = "0.25.*" }
blenvy = { git = "https://github.com/TGRCdev/Blenvy", branch = "blenvy-bevy-0.15" }
rand = "0.8.5"
iyes_progress = "0.13.1"
bevy_copperfield = { version = "0.1.0", optional = true }
nalgebra = "0.33.2"
bitintr = "0.3.0"
palette = "0.7.6"
enterpolation = "0.2.1"

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.15.3"
features = ["x11", "wayland", "bevy_winit"]
default-features = true

[dev-dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "file_watcher",
] }

bevy_third_person_camera = "0.2.0"

[features]
default = []
pathfind = ["dep:vleue_navigator"]
proc_terrain = ["dep:baby_shark", "dep:bevy_copperfield", "dep:stl_io"]
debug = []

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
